bk_ida/gccida/c1/parse_identifier_slow
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:927:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 * parse_identifier_slow( cpp_reader_0 *pfile, const U_CHAR *cur) 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:927:41: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_hashnode_0 * parse_identifier_slow( cpp_reader_0 *pfile, const U_CHAR *cur) 
                                        ^~~~~~~~~~~~
                                        cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:929:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // rbx 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:946:20: error: expected identifier or '('
 struct hash_table = pfile->hash_table; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:957:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)v7] & 0x204) != 0 || v7 == 36 && pfile->opts.dollars_in_ident ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:972:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v7] & 0x204) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:1001:26: error: expected expression
return ( cpp_hashnode_0 *)ht_lookup( v14, v15, ( int)v12 - ( int)object_base, HT_ALLOCED); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/cpplex.c:1001:10: error: use of undeclared identifier 'cpp_hashnode_0'
return ( cpp_hashnode_0 *)ht_lookup( v14, v15, ( int)v12 - ( int)object_base, HT_ALLOCED); 
         ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/parse_identifier_slow/src/obj/cpplex.o] Error 1
